projects/eventhub/infrastructure/load-testing-infrastructure/arm/global.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "suffix": {
            "type": "string"
        },
        "location": {
            "type": "string"
        },
        "tags": {
            "type": "object"
        }        
    },
    "variables": {
        "loadTestName": "[concat('ldtest', parameters('suffix'))]",
        "akvName": "[concat('kv', parameters('suffix'))]",  
        "loadTestingVNETName": "[concat('vnet',parameters('suffix'))]",  
        "loadTestingSubnetName": "[concat('subnet',parameters('suffix'))]",  
        "loadTestingNsgName": "[concat('nsg',parameters('suffix'))]",  
        "loadTestingPip": "[concat('pip',parameters('suffix'))]", 
        "loadTestingNATGatewayName": "[concat('natgw',parameters('suffix'))]"
    },
    "resources": [
        {
            "type": "Microsoft.LoadTestService/loadTests",
            "apiVersion": "2022-12-01",
            "name": "[variables('loadTestName')]",
            "location": "[parameters('location')]",
            "tags": "[parameters('tags')]",
            "identity": {
                "type": "SystemAssigned"
            }
        },
        {
            "apiVersion": "2022-07-01",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('loadTestingNsgName')]",
            "location": "[parameters('location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "batch-node-management-inbound",
                        "properties": {
                            "description": "Create, update, and delete of Azure Load Testing compute instances.\n",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "29876-29877",
                            "sourceAddressPrefix": "BatchNodeManagement",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "azure-load-testing-inbound",
                        "properties": {
                            "description": "Create, update, and delete of Azure Load Testing compute instances.\n",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "8080",
                            "sourceAddressPrefix": "AzureLoadTestingInstanceManagement",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "azure-load-testing-outbound",
                        "properties": {
                            "description": "Used for various operations involved in orchestrating a load tests.\n",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 120,
                            "direction": "Outbound"
                        }
                    }
                ]
            }
        },        
        {
            "apiVersion": "2022-07-01",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[variables('loadTestingPip')]",
            "location": "[parameters('location')]",
            "sku": {
              "name": "Standard"
            },      
            "properties": {
              "publicIPAddressVersion": "IPv4",
              "publicIPAllocationMethod": "Static",
              "idleTimeoutInMinutes": 4              
            }
        },                
        {
            "apiVersion": "2022-07-01",
            "type": "Microsoft.Network/natGateways",
            "name": "[variables('loadTestingNATGatewayName')]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', variables('loadTestingPip'))]"
            ],            
            "properties": {
                "idleTimeoutInMinutes": 4,
                "publicIpAddresses": [
                    {
                        "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('loadTestingPip'))]"
                    }
                ]                
            },
            "sku": {
                "name": "Standard"
            }
        },
        {
            "apiVersion": "2022-07-01",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[variables('loadTestingVNETName')]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/natGateways', variables('loadTestingNATGatewayName'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('loadTestingNsgName'))]"
            ],            
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.1.0.0/16"
                    ]
                },
                "subnets": [
                    {
                        "name": "default",
                        "properties": {
                            "addressPrefix": "10.1.0.0/24",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('loadTestingNsgName'))]"
                            }
                        }
                    },                    
                    {
                        "name": "[variables('loadTestingSubnetName')]",
                        "properties": {
                            "addressPrefix": "10.1.1.0/24",
                            "natGateway": {
                                "id": "[resourceId('Microsoft.Network/natGateways', variables('loadTestingNATGatewayName'))]"
                            },
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('loadTestingNsgName'))]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.KeyVault/vaults",
            "apiVersion": "2022-07-01",
            "name": "[variables('akvName')]",
            "location": "[parameters('location')]",
            "properties": {
                "accessPolicies": [],
                "enableRbacAuthorization": true,
                "enableSoftDelete": false,
                "enabledForDeployment": false,
                "enabledForDiskEncryption": false,
                "enabledForTemplateDeployment": false,
                "tenantId": "[subscription().tenantId]",       
                "sku": {
                    "family": "A",
                    "name": "standard"
                },
                "networkAcls": {
                    "defaultAction": "Deny",
                    "bypass": "AzureServices"
                }
            }
        }
    ],    
    "outputs": {
      "LOAD_TESTING_NAT_GATEWAY_NAME": {
        "type": "string",
        "value": "[variables('loadTestingNATGatewayName')]"
      },
      "LOAD_TESTING_PIP_NAME": {
        "type": "string",
        "value": "[variables('loadTestingPip')]"
      },
      "LOAD_TESTING_VNET_NAME": {
        "type": "string",
        "value": "[variables('loadTestingVNETName')]"
      },
      "LOAD_TESTING_SUBNET_NAME": {
        "type": "string",
        "value": "[variables('loadTestingSubnetName')]"
      },
      "LOAD_TESTING_PUBLIC_IP_ADDRESS": {
        "type": "string",
        "value": "[reference(resourceId('Microsoft.Network/publicIPAddresses',variables('loadTestingPip'))).IpAddress]"
      },
      "LOAD_TESTING_SUBNET_ID": {
        "type": "string",
        "value": "[concat(resourceId('Microsoft.Network/virtualNetworks', variables('loadTestingVNETName')), '/subnets/',  variables('loadTestingSubnetName'))]"
      },
      "LOAD_TESTING_KEY_VAULT_NAME": {
        "type": "string",
        "value": "[variables('akvName')]"
      }, 
      "LOAD_TESTING_NAME": {
        "type": "string",
        "value": "[variables('loadTestName')]"
      }       
    }    
}
